[gd_scene load_steps=23 format=3 uid="uid://bm7bjeo6ffbqx"]

[ext_resource type="Texture2D" uid="uid://gmuasefy7ag8" path="res://sprites/effects/sma4_sprites copy 3.png" id="2_ejum2"]
[ext_resource type="Script" path="res://squirtle_shell.gd" id="2_iq5s6"]
[ext_resource type="Texture2D" uid="uid://ua6r8137q4hs" path="res://sprites/player/all anims/death/New Piskel.png" id="3_dswqq"]
[ext_resource type="Texture2D" uid="uid://c51qulxvp021g" path="res://sprites/mobs/squirtle/SNES - Super Mario World - Koopas & Masked Koopas (1).png" id="6_12xew"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tq6re"]
resource_local_to_scene = true
size = Vector2(14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi37v"]
atlas = ExtResource("3_dswqq")
region = Rect2(0, 0, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_raudr"]
atlas = ExtResource("3_dswqq")
region = Rect2(42, 0, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg0j0"]
atlas = ExtResource("3_dswqq")
region = Rect2(0, 31, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4sx"]
atlas = ExtResource("3_dswqq")
region = Rect2(42, 31, 42, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcyre"]
atlas = ExtResource("6_12xew")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfv5f"]
atlas = ExtResource("6_12xew")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_as0rw"]
atlas = ExtResource("6_12xew")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bntq"]
atlas = ExtResource("6_12xew")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_q2pg2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ejum2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi37v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raudr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg0j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4sx")
}],
"loop": false,
"name": &"Death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcyre")
}],
"loop": true,
"name": &"squirtle_shell_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcyre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfv5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as0rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bntq")
}],
"loop": true,
"name": &"squirtle_shell_moving",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ipik"]
resource_local_to_scene = true
size = Vector2(18, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4tpb8"]
resource_local_to_scene = true
size = Vector2(40, 19.875)

[sub_resource type="AnimationRootNode" id="AnimationRootNode_o7gkj"]

[sub_resource type="Animation" id="Animation_r2wma"]
resource_name = "Death_2"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Death"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_c06bb"]
resource_name = "new_animation"

[sub_resource type="Animation" id="Animation_dawjy"]
resource_name = "shell_idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"squirtle_shell_idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ucyu0"]
resource_name = "shell_moving"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"squirtle_shell_moving"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ssoty"]
_data = {
"Death": SubResource("Animation_r2wma"),
"new_animation": SubResource("Animation_c06bb"),
"shell_idle": SubResource("Animation_dawjy"),
"shell_moving": SubResource("Animation_ucyu0")
}

[node name="SquirtleShell" type="CharacterBody2D"]
z_index = 3
collision_mask = 13
script = ExtResource("2_iq5s6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tq6re")
one_way_collision = true
one_way_collision_margin = 128.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_q2pg2")
animation = &"Death"

[node name="Shell2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shell2D"]
shape = SubResource("RectangleShape2D_6ipik")

[node name="LeafDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeafDetection"]
shape = SubResource("RectangleShape2D_4tpb8")

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationRootNode_o7gkj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ssoty")
}

[node name="ShellKickTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Shell2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Shell2D" to="." method="_on_shell_2d_body_entered"]
[connection signal="body_entered" from="LeafDetection" to="." method="_on_leaf_detection_body_entered"]
[connection signal="body_exited" from="LeafDetection" to="." method="_on_leaf_detection_body_exited"]
